<resources>
    <string name="app_name">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Drawer_Header">Human Resource Manager</string>
    <string name="Users_Full_Name">Full Name</string>
    <string name="Home">Home</string>
    <string name="AddEmployee">Add Employee</string>
    <string name="EmployeeSection">Employee Section</string>
    <string name="EditEmployee">Edit Employee</string>
    <string name="DeleteEmployee">Delete Employee</string>
    <string name="SearchAndViewEmployees">Search and View Employees</string>
    <string name="TourGuideRecruitment">Tour Guide Recruitment</string>
    <string name="TGApplicationReview">Tour Guide Application Review</string>
    <string name="TGApplicationPreview">Tour Guide Application Preview</string>
    <string name="profit">Profit</string>
    <string name="log_out">Log Out</string>
    <string name="https_ceylontripsandtramps_com">www.ceylontripsandtramps.com/</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="addManagerialEmployee">Add Employee</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="dob">Date of Birth</string>

    <string name="mPosition">Position</string>
    <string name="reasonToRecruit">Reason</string>
    <string name="add">Add</string>
    <string name="nic_number">NIC Number</string>
    <string name="update">Update</string>
    <string name="update_employee">Update Employee</string>
    <string name="employee_number">Employee Number</string>
    <string name="occupation">Occupation</string>
    <string name="password">Password</string>
    <string name="nic">NIC</string>

    <string name="null_data">Null Data</string>
    <string name="email">Email</string>
    <string name="delete_employees">Delete Employees</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="add_income_details">Add Income Details</string>
    <string name="email_address">Email Address</string>
    <string name="income_amount">Income Amount</string>
    <string name="room_reservation_amount">Room Reservation Amount</string>
    <string name="vehicle_reservation_amount">Vehicle Reservation Amount</string>
    <string name="expense_id">Expense ID</string>
    <string name="username">Username</string>
    <string name="amount">Amount</string>
    <string name="details">Details</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save">save</string>
    <string name="financial_report">Financial Report</string>
    <string name="search">Search</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="create_view_expense_details">Create/View Expense Details</string>
    <string name="create_view_income_details">Create/View Income Details</string>
    <string name="create_view_financial_report">Create/View Financial Report</string>
    <string name="view_update_delete_inventory">View/Update/Delete Inventory</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="inventory_section">Inventory Section</string>
    <string name="financial_section">Financial Section</string>
    <string name="work_assign_section">Work Assign Section</string>
</resources>